--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@ doctype html
 
 
 
-<body>
-    
-
-
-
+<body> <link rel="stylesheet" href="style.css">
+    <section class="principal">
+    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+   <img src="Group 28.png" alt="o combo+ é  junção do alura+ e o alura lingua">
+ <img src="Background.png" alt="o combo+ é  junção do alura+ e o alura lingua">
+</section>
 
 </body>
 <html>
