--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-doctype html
-
 <html>
 <head>
     <title>AluraPlus</title>.
@@ -19,6 +17,27 @@ doctype html
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
    <img src="Group 28.png" alt="o combo+ é  junção do alura+ e o alura lingua">
  <img src="Background.png" alt="o combo+ é  junção do alura+ e o alura lingua">
+ <div>
+</section> 
+
+<section class="dispositivos"> 
+    <h2 class="dispositivos_dispositivos">Disponível nos seus dispositivos favoritos</h2>
+    <ul class="dispoditivos_lista" >
+        <li>
+             <img src="tv (1).png" alt="icone da tv">
+            <h3 class="lista_item">tv</h3>
+        <li>
+        </li>
+            <img src="computador.png" alt="icone computador">
+            <h3 class="lista_item">computadores</h3>
+        </li>
+        <li> 
+            <img src="celular.png" alt="icone do celular">
+            <h3 class="lista_item">celulares</h3>
+        </li>
+
+</ul>
+
 </section>
 
 </body>
